[package]
name = "rc_arena"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Dark42ed/rc_arena"

[dependencies]

[[bench]]
name = "rc_allocate"
harness = false

[[bench]]
name = "rc_deref"
harness = false

[[bench]]
name = "rc_drop"
harness = false

[dev-dependencies]
brunch = "0.5.2"
