[package]
name = "ref_arena"
description = "An arena of reference counted objects."
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Dark42ed/ref_arena"
repository = "https://github.com/Dark42ed/ref_arena"

[dependencies]

[[bench]]
name = "rc_allocate"
harness = false

[[bench]]
name = "rc_deref"
harness = false

[[bench]]
name = "rc_drop"
harness = false

[[bench]]
name = "rc_reallocate"
harness = false

[dev-dependencies]
brunch = "0.5.2"
